# BattleShip

./: CMakeLists.txt  main.cpp
include/: aircraft.h  battleship.h  cruiser.h  destroyer.h  player.h  ship.h  shooting.h  submarine.h
src/: board.cpp  board.h  player.cpp  ship.cpp  shooting.cpp
